@@ -1,6 +1,8 @@
 Pending changes in the mainline
 ===============================
 
+* Custom exception "orthanc.OrthancException" is raised instead of "ValueError"
+
 
 Version 3.2 (2021-06-11)
 ========================
